# gloria-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  glama.json  pyproject.toml  requirements.txt  server.json
.github/workflows/: publish.yml
deploy/: gloria-mcp.service  nginx-mcp.conf
src/gloria_mcp/: client.py  models.py  server.py
