[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gloria-mcp"
version = "0.1.0"
description = "MCP server for Gloria AI curated crypto news"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
gloria-mcp = "gloria_mcp.server:main"
